--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,11 +1,11 @@
-<%= render 'shared/card', content: capture do %>
+<%= render 'shared/card' do %>
   <div class="flex items-center justify-between mb-2">
     <span class="font-semibold text-gray-900 dark:text-gray-100"><%= review.user.display_name %></span>
     <span class="text-yellow-500 text-sm">⭐️ <%= review.rating %></span>
   </div>
   <p class="text-gray-700 dark:text-gray-300 text-sm mb-2"><%= review.comment %></p>
-  <% if defined?(offering) && offering && review.user == current_user %>
-    <%= link_to 'Delete', offering_review_path(offering, review), method: :delete,
-        data: { confirm: 'Are you sure?' }, class: 'text-red-500 text-xs' %>
-  <% end %>
+    <% if defined?(offering) && offering && review.user == current_user %>
+      <%= link_to 'Delete', offering_review_path(offering, review), method: :delete,
+          data: { confirm: 'Are you sure?' }, class: 'text-red-500 text-xs' %>
+    <% end %>
 <% end %>
